--- a/main.css
+++ b/main.css
@@ -44,7 +44,7 @@ p
 	height: 125px;
 	display: inline-block;
 	margin: 3px;
-	background-image: url("img/karta.png");
+	background-image: url("karta.png");
 	border: 4px solid #976a08;
 	border-radius: 4px;
 	cursor: default;
@@ -58,7 +58,7 @@ p
 	height: 125px;
 	display: inline-block;
 	margin: 3px;
-	background-image: url("img/karta.png");
+	background-image: url("karta.png");
 	border: 4px solid #51c8b2;
 	border-radius: 4px;
 	cursor: pointer;
